# STM32F103_MAX30102

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  MAX30102.ioc  README.md
Core/Inc/: main.h  ppg_algorithm.h  ppg_algorithm_v2.h  ppg_filter.h
Core/Src/: gpio.c  main.c  main_usage_example.c  ppg_algorithm.c  ppg_algorithm_v2.c  ppg_filter.c
docs/: algorithm.md  algorithm_switching.md  hardware.md  method2_bugfix.md  method2_stability.md
lib/oled/inc/: delay.h  filters.h  hr_spo2_calculator.h  max30102.h  oled.h  soft_i2c.h
lib/oled/src/: delay.c  filters.c  font.c  hr_spo2_calculator.c  max30102.c  oled.c  soft_i2c.c
tests/: CMakeLists.txt  dpt_method_test.c  method1_pipeline_test.c
